transition betwheen start and menupage working, fixing bug menu screen contents not visible

--- a/css/style-nicolle.css
+++ b/css/style-nicolle.css
@@ -30,11 +30,31 @@
 .notVisible {
   display: none !important;
 }
+
+.notOpacitied {
+  inset: 0;
+
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+}
+.trans{
+    transition: 1s ease;
+
+}
+.positiveOpacitied {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+/* ? were making the attunament opacity smooth animation */
 .seeable {
   display: block;
 }
 body {
   overflow: hidden;
+  background-color: black;
   background-color: var(--temporary-color);
 }
 .glass {
@@ -43,7 +63,8 @@ body {
   -webkit-backdrop-filter: blur(10px);
   border-radius: 20px;
   border: 1px solid rgba(127, 127, 127, 0.3);
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.4),
+  box-shadow:
+    2px 2px 10px rgba(0, 0, 0, 0.4),
     inset 0 1px 0 rgba(202, 221, 226, 0.5),
     inset 0 -1px 0 rgba(255, 255, 255, 0.1),
     inset 0 0 4px 2px rgba(59, 59, 59, 0.2);
@@ -59,6 +80,7 @@ body {
 .blurrGame {
   filter: blur(7px);
 }
+
 /* css fot the start screen */
 .startinfo {
   text-align: center;
@@ -153,6 +175,10 @@ body {
 .menu-it1 h3:hover {
   scale: 1.15;
 }
+.exit a {
+  color: var(--standard-radius);
+  text-decoration: none;
+}
 .attunement,
 .legacy-contain {
   position: absolute;
@@ -224,11 +250,11 @@ body {
   background-color: rgba(218, 44, 0, 0.584);
   padding: 5px;
   cursor: pointer;
-position: absolute;
+  position: absolute;
   border-radius: 30px;
   margin: 0;
 }
-.rules{
+.rules {
   margin-left: 100px;
   display: flex;
   justify-content: space-between;
@@ -237,9 +263,8 @@ position: absolute;
   width: 400px;
   margin-top: 60px;
   margin-left: 90px;
-  
 }
-#info2{
+#info2 {
   margin-right: 100px;
   margin-top: -100px;
 }
@@ -267,7 +292,7 @@ position: absolute;
   margin-left: 30px;
   margin-top: 10px;
 }
-.legacyQuote  a{
+.legacyQuote a {
   text-decoration: none;
   color: var(--font-color);
 }
@@ -314,7 +339,8 @@ position: absolute;
 .board {
   display: grid;
   width: 800px;
-  box-shadow: 5px 5px 30px rgba(2, 232, 248, 0.135),
+  box-shadow:
+    5px 5px 30px rgba(2, 232, 248, 0.135),
     -5px -5px 30px rgba(195, 2, 243, 0.258);
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
@@ -402,6 +428,9 @@ position: absolute;
 .sideInformation {
   margin-top: 30px;
   margin-left: 20px;
+  opacity: 1;
+  transition: 0.3s ease;
+  text-wrap: nowrap;
 }
 .sideInformation h3 {
   margin-top: 20px;
@@ -430,11 +459,11 @@ position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: 0;
-  width: 800px;       
+  width: 800px;
   height: auto;
 
-  pointer-events: none; 
-  z-index: 50;      
+  pointer-events: none;
+  z-index: 50;
 }
 
 /* css for the win/ lose screens */
@@ -499,7 +528,7 @@ position: absolute;
   padding: 3px 15px 10px;
   border-radius: var(--standard-radius);
 }
-.Home{
+.Home {
   color: var(--font-color);
   text-decoration: none;
 }
